# Glennergy-ESP

./: .gitignore  AI_CONTEXT.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
.github/workflows/: doxygen-batch-campaign.yml  doxygen-openai.yml
components/i2c/: i2c.c  i2c.h
components/jansson/: CMakeLists.txt
components/lvgl_port/: lvgl_port.h
components/lvgl_port/lvgl__lvgl/: lv_conf.h  lvgl.h
docs/: API_ENDPOINTS.md  Doxygen_Standard.md  Doxygen_TODO.md  Doxygen_Workflow_Guide.md  UART_COMMANDS.md  easy_api_doc.md  template_C.c  template_H.h  template_Main.c
main/: CMakeLists.txt  HTTP.c  HTTP.h  WiFi.c  WiFi.h  app_queues.h  app_types.h  idf_component.yml  lvgl_demo.c  lvgl_demo.h  main.c
main/Cache/: Cache.c  Cache.h
main/JSONParser/: DataParser.c  DataParser.h
main/LEOP/: LEOP_Fetcher.c  LEOP_Fetcher.h  Price.c  Price.h  Recommendation.c  Recommendation.h  Weather.c  Weather.h  fake_leop.cpp  fake_leop.hpp  leop.cpp  leop.h
main/Memory/: NVS.h  Spiffs.c  Spiffs.h
main/SNTP/: time_sync.c  time_sync.h
main/UART/: Queues.h  UART.cpp  UART.hpp  fake_config.cpp  fake_config.hpp  fake_leop.cpp  fake_leop.hpp  fake_sensor.cpp  fake_sensor.h  fake_sensor.hpp  fake_system_status.cpp  fake_system_status.hpp  uart_diag_shell.cpp  uart_diag_shell.hpp
main/fake/: fake_config.cpp  fake_config.hpp  fake_system_status.cpp  fake_system_status.hpp
main/hal/: I2C.hpp  bme280_sensor.cpp  bme280_sensor.hpp  hal_classes.h  humidity_sensor.hpp  humidity_sensor_c_api.cpp  humidity_sensor_c_api.h  pressure_sensor.hpp  pressure_sensor_c_api.cpp  pressure_sensor_c_api.h  temperature_sensor.hpp  temperature_sensor_c_api.cpp  temperature_sensor_c_api.h
main/leop/: fake_leop.cpp  fake_leop.hpp  leop.cpp  leop.h
main/sensor/: fake_sensor.cpp  fake_sensor.hpp  sensor.cpp  sensor.h
main/test/: CMakeLists.txt  sdkconfig
main/test/main/: CMakeLists.txt  test.c  test_dataparser_price.c  test_dataparser_recommendation.c  test_dataparser_weather.c  test_probe.c  test_recommendation.c
tools/doxygen_ai/: README.md  batches_manual.txt  update_docs.py
tools/doxygen_ai/rejected/: main__Memory__NVS.c.rejected.txt  main__UART__UART.cpp.rejected.txt  main__UART__uart_diag_shell.cpp.rejected.txt
tools/doxygen_ai/state/: campaign_manifest_1.json  campaign_manifest_10.json  campaign_manifest_11.json  campaign_manifest_12.json  campaign_manifest_13.json  campaign_manifest_14.json  campaign_manifest_15.json  campaign_manifest_2.json  campaign_manifest_3.json  campaign_manifest_4.json  campaign_manifest_5.json  campaign_manifest_6.json  campaign_manifest_7.json  campaign_manifest_9.json  campaign_results.txt  run_manifest.json
ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
ui/Tabs/Electricity/: Electricity_UI.c  Electricity_UI.h  Price_UI.c  Price_UI.h
ui/Tabs/Home/: Sensor_UI.c  Sensor_UI.h
ui/Tabs/Settings/: WiFi_UI.c  WiFi_UI.h
ui/Tabs/Weather/: Weather_UI.c  Weather_UI.h
ui/components/: ui_comp_hook.c
ui/images/: icons8-cloud-lightning-50.c  icons8-clouds-50.c  icons8-fog-50.c  icons8-heavy-rain-50.c  icons8-partly-cloudy-day-50.c  icons8-rain-50.c  icons8-snow-50.c  icons8-summer-50.c  icons8-thermometer-50.c
ui/screens/: Main_UI.c  Main_UI.h  ui_Screen1.c  ui_Screen1.h
